--- a/sections/hero/hero.html
+++ b/sections/hero/hero.html
@@ -1,9 +1,9 @@
 <!-- HERO (with canvas and logo) -->
-<section id="heroSection" class="relative w-full h-screen">
+<section id="heroSectionContent" class="relative w-full h-screen overflow-hidden">
   <div class="absolute inset-0 -z-10">
     <img
       id="bgImage"
-      src="../../assets/images/hero-1.avif"
+      src="./assets/images/hero-1.avif"
       alt="Background"
       class="w-full h-full object-cover opacity-70 transition-opacity duration-500"
     />
@@ -15,7 +15,7 @@
     style="background: rgba(0, 0, 0, 0.5)"
   >
     <img
-      src="../../assets/images/logo.avif"
+      src="./assets/images/logo.avif"
       alt="Logo"
       id="logoImage"
       class="w-48 h-auto"
@@ -28,16 +28,28 @@
     id="textOverlay"
     class="absolute inset-0 flex flex-col items-center justify-center text-center text-white opacity-0 transition-opacity duration-1000 pointer-events-none z-40"
   >
-    <div class="mb-20">
+    <div class="mb-48">
       <h1 class="text-4xl md:text-6xl">Valuable, that is</h1>
       <div class="flex items-center justify-center mb-8">
         <h1 class="text-4xl md:text-6xl mr-3">Our</h1>
         <span id="typewriter" class="text-4xl md:text-6xl font-semibold"></span>
       </div>
     </div>
-    <p class="text-[17px] font-[400] max-w-xl mt-8">
+    <p class="text-[17px] font-[400] max-w-xl mt-8 px-4">
       OVA is an investment fund built around a central promise: to invest
       disruptively in the most valuable, promising, and resilient assets.
     </p>
   </div>
+  
+  <!-- Gradient transition at bottom -->
+  <div
+    class="absolute bottom-0 left-0 w-full h-48 pointer-events-none"
+    style="
+      background: linear-gradient(
+        to bottom,
+        rgba(0, 0, 0, 0) 20%,
+        rgba(0, 0, 0, 1) 100%
+      );
+    "
+  ></div>
 </section>
